[project]
name = "q2survey"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "romaintailhurat", email = "romain.tailhurat@gmail.com" }]
dependencies = ["marimo>=0.9.16", "polars>=1.12.0", "altair[all]>=5.4.1"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
up = "marimo edit survey.py"
md = "marimo export md survey.py -o survey.md"
html = "marimo export html survey.py -o ./docs/index.html"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/q2survey"]
